# netHawk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_PLAN.md  README.md  output.pcap
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI.md  PROTOCOL.md
scripts/: check-doc-coverage.sh  check-test-coverage.sh
src/: analyse.rs  capture.rs  cli.rs  lib.rs  main.rs  printer.rs  status.rs  tcp_stream.rs
src/protocol/: arp.rs  dhcp.rs  dns.rs  ethernet.rs  http.rs  icmp.rs  ip.rs  mod.rs  tcp.rs  tls.rs  udp.rs
tests/: cli_tests.rs  protocol_fuzz.proptest-regressions  protocol_fuzz.rs
