[package]
name = "nethawk"
version = "0.1.0"
edition = "2024"
description = "A native Rust network packet capture and multi-layer protocol analyzer for Linux"
authors = ["anqmaly"]
license = "MIT"
repository = "https://github.com/AnQnYmity/netHawk"
keywords = ["network", "packet", "capture", "analyzer", "protocol"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "nethawk"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
pcap = "2"

[features]
default = []
async = ["tokio"]
json = ["serde", "serde_json"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
